feat: ajout des stats nationales pour le sup
