# server/src/http/routes/certificationsRoutes.js
@@ -15,7 +15,13 @@ import {
   sendImageOnError,
 } from "#src/http/utils/responseUtils.js";
 import BCNRepository from "#src/common/repositories/bcn.js";
-import { getLastMillesimes, transformDisplayStat, statsAnneeTerminale } from "#src/common/stats.js";
+import {
+  getLastMillesimesFor,
+  getLastMillesimes,
+  transformDisplayStat,
+  getLastMillesimesSup,
+  statsAnneeTerminale,
+} from "#src/common/stats.js";
 import { getStatsAsColumns } from "#src/common/utils/csvUtils.js";
 import CertificationsRepository from "#src/common/repositories/certificationStats.js";
 import { ErrorNoDataForMillesime, ErrorCertificationNotFound, ErrorCertificationsNotFound } from "#src/http/errors.js";
@@ -77,13 +83,22 @@ export default () => {
       const { millesimes, code_certifications, page, items_par_page, ext } = await validate(
         { ...req.query, ...req.params },
         {
-          ...validators.statsList([getLastMillesimes()]),
+          ...validators.statsList([]),
         },
         { code_certifications: formatCodesCertifications }
       );
 
       let { find, pagination } = await CertificationsRepository.findAndPaginate(
-        { millesime: millesimes.map(formatMillesime), code_certification: code_certifications },
+        {
+          code_certification: code_certifications,
+          millesime: millesimes.map(formatMillesime),
+          ...(millesimes.length === 0
+            ? {
+                millesimeSco: [getLastMillesimes()],
+                millesimeSup: [getLastMillesimesSup()],
+              }
+            : {}),
+        },
         {
           limit: items_par_page,
           page,
@@ -123,17 +138,24 @@ export default () => {
     "/api/inserjeunes/certifications/:codes_certifications.:ext?",
     authMiddleware("public"),
     tryCatch(async (req, res) => {
-      const { codes_certifications, millesime, vue, ...options } = await validate(
+      const {
+        codes_certifications,
+        millesime: millesimeBase,
+        vue,
+        ...options
+      } = await validate(
         { ...req.params, ...req.query },
         {
           ...validators.codesCertifications(),
           ...validators.universe(),
-          ...validators.millesime(getLastMillesimes()),
+          ...validators.millesime(null),
           ...validators.vues(),
           ...validators.svg(),
         },
         { codes_certifications: formatCodesCertifications }
       );
+
+      const millesime = formatMillesime(millesimeBase || getLastMillesimesFor(codes_certifications[0].filiere));
 
       if (vue === "filieres" || codes_certifications.length > 1) {
         return sendImageOnError(
@@ -163,18 +185,27 @@ export default () => {
     "/api/inserjeunes/certifications/:codes_certifications/widget/:hash",
     authMiddleware("public"),
     tryCatch(async (req, res) => {
-      const { hash, theme, codes_certifications, millesime, vue, ...options } = await validate(
+      const {
+        hash,
+        theme,
+        codes_certifications,
+        millesime: millesimeBase,
+        vue,
+        ...options
+      } = await validate(
         { ...req.params, ...req.query },
         {
           hash: Joi.string(),
           ...validators.codesCertifications(),
           ...validators.universe(),
-          ...validators.millesime(getLastMillesimes()),
+          ...validators.millesime(null),
           ...validators.vues(),
           ...validators.widget("stats"),
         },
         { codes_certifications: formatCodesCertifications }
       );
+
+      const millesime = formatMillesime(millesimeBase || getLastMillesimesFor(codes_certifications[0].filiere));
 
       try {
         if (vue === "filieres" || codes_certifications.length > 1) {
